updated the backend in a best Architect way